# Warp-Divergence-Analyzer

./: CMakeLists.txt  Dockerfile  README.md  WarpAnalysis.cpp  run.sh  runTests.py  test.sh  warp-insight-0.0.1.vsix  warp.sh
include/: AnalysisLogic.h  JsonEmitter.h  Utils.h  WarpAnalysis.h  WarpDivergence.h
json/: kernels.cu.json
lib/: WarpDivergence.cpp
src/: AnalysisLogic.cpp  JsonEmitter.cpp  Utils.cpp  WarpAnalysis.cpp
test/: kernels.cu  main.cpp  test.ll  test1.cu  test2.cu  test3.cu  test4.cu  test5.cu
test/samples/: test1.ll  test2.ll  test3.ll  test4.ll  test5.ll
